# Lyrics-Studio

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  turbo.json  vercel.json
apps/alignment-service/: .env.example  Dockerfile  pyproject.toml  requirements.dev.txt  requirements.txt
apps/alignment-service/app/: config.py  main.py
apps/alignment-service/app/api/v1/: router.py
apps/alignment-service/app/api/v1/endpoints/: alignment.py  health.py
apps/alignment-service/app/models/: alignment.py
apps/alignment-service/app/services/: alignment_service.py  callback_service.py
apps/alignment-service/tests/: conftest.py  test_alignment.py  test_health.py
apps/web/: .eslintrc.json  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(dashboard)/: error.tsx  layout.tsx
apps/web/src/components/audio/: SyncEditor.tsx
apps/web/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
apps/web/src/components/layout/: Header.tsx  Sidebar.tsx
apps/web/src/components/lyrics/: LyricsPanel.tsx
apps/web/src/components/projects/: EmptyState.tsx  ProjectCard.tsx  ProjectWorkspace.tsx  ProjectsList.tsx
apps/web/src/components/ui/: alert.tsx  (+8 more)
apps/web/src/hooks/: use-toast.ts  useAlignmentJob.ts  useJobPoll.ts  useWaveSurfer.ts
apps/web/src/lib/: env.ts  utils.ts
apps/web/src/store/: useEditorStore.ts  useProjectStore.ts  useUploadStore.ts
apps/web/src/workers/: start.ts
(+34 files in other folders)
