[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alignment-service"
version = "0.1.0"
description = "WhisperX forced alignment microservice for LyricSync Studio"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "whisperx>=3.3.1",
  "torch>=2.5.1",
  "torchaudio>=2.5.1",
  "httpx>=0.28.0",
  "python-multipart>=0.0.19",
  "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "httpx>=0.28.0",
  "ruff>=0.8.6",
  "mypy>=1.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S"]
ignore = ["S603", "S607"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
